cmake_minimum_required(VERSION 3.10)
project(CallBack)
enable_language(Fortran)
message(STATUS "Fortran COMPILER = ${CMAKE_Fortran_COMPILER}")
if (${CMAKE_Fortran_COMPILER} MATCHES "ifort.*$")
  set(CMAKE_Fortran_FLAGS  "${CMAKE_Fortran_FLAGS}  -DALIGN_64 -O3  -mavx2 -ipo -ansi-alias ")
else ()
  set (USING_GNU TRUE)
  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O3 -Wall -march=native")
endif ()

add_executable(run call_back.f90 m_call_back.f90 m_utils.f90)
